Fix spacing for art projects

--- a/src/styles/ArtSkills.css
+++ b/src/styles/ArtSkills.css
@@ -30,7 +30,6 @@ html {
     margin: 10rem auto;
 }
 
-
 .art-skills-container {
     display: flex;
     flex-direction: row;
@@ -38,6 +37,7 @@ html {
     justify-content: center;
     gap: 30px;
     margin: 50px;
+    margin-bottom: 100px;
     width: 55%;
 }
 
@@ -83,11 +83,11 @@ html {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 750px;
     margin: 50px;
-    gap: 3rem;
+    margin-top: 20px;
     width: 75%;
     padding: 20px;
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.2 );
